Fix main background to contrast

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
   
    /* Background main */
 
-  --main: #161b22;
+  --main: #0d1117;
   
   /* Button styling */
 
